kubeflow/common/knative/upstream/knative-serving/overlays/gateways/patches/gateway-selectors.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata: # kpt-merge: knative-serving/knative-local-gateway
  name: knative-local-gateway
  namespace: knative-serving
spec:
  selector:
    app: cluster-local-gateway
    istio: cluster-local-gateway
---
apiVersion: v1
kind: Service
metadata: # kpt-merge: istio-system/knative-local-gateway
  name: knative-local-gateway
  namespace: istio-system
spec:
  selector:
    app: cluster-local-gateway
    istio: cluster-local-gateway
